--- a/style.css
+++ b/style.css
@@ -356,6 +356,9 @@ section.discover .container-discover {
     flex-direction: row;
     padding: 150px 0px;
     align-items: flex-end;
+    width: 100%;
+    height: 25%;
+    
 }
 
 .bloges h2{
@@ -368,3 +371,169 @@ section.discover .container-discover {
      opacity: 0.7;
  }
 
+ .blog-1{
+    width: 25%;
+    height: 100%;
+ }
+
+ .blog-2{
+    width: 25%;
+    height: 100%;
+ }
+
+ .blog-3{
+    width: 25%;
+    height: 100%;
+ }
+
+ .blog-4{
+    width: 25%;
+    height: 100%;
+ }
+/* journal */
+
+
+.journal-title{
+    text-align: center;
+    padding: 220px 0px;
+}
+
+.journal-title h2{
+    font-size: 42px;
+}
+
+.journal-title p{
+    font-size: 16px;
+    padding: 30px 0px;
+}
+
+.journales{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 0px 170px;
+    width: 76%;
+    height: 100%;
+}
+
+.first-row{
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+}
+
+.second-row{
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    padding: 40px 0px;
+}
+
+
+
+.first-row-img{
+    margin: -3px 0px;
+}
+
+.first-row-avatar{
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #1F242E;
+}
+
+.journal-vatar-img{
+    padding: 0px 30px;
+}
+
+.first-row-avatar p{
+    font-size: 14px;
+}
+
+.first-row-avatar h2{
+    font-size: 18px;
+    padding: 14px 30px 11px 30px;
+}
+
+.first-row-avatar :nth-child(4){
+    font-size: 14px;
+    color: #757D8C;
+    padding: 11px 231px 30px 30px;
+}
+
+.second-row-img{
+    margin: -3px 0px;
+}
+
+.second-row-avatar{
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #1F242E; 
+}
+
+.second-row-avatar p{
+    font-size: 14px;
+}
+
+.second-row-avatar h2{
+    font-size: 18px;
+    padding: 14px 30px 11px 30px;
+}
+
+.second-row-avatar :nth-child(4){
+    font-size: 14px;
+    color: #757D8C;
+    padding: 11px 231px 30px 30px;
+}
+
+.share-icon{
+    padding: 6px 30px 30px 286px;
+    margin: -57px 0px 0px 0px;
+}
+
+section.journal a span.journal-button-text{
+    background-color: #F49F0A;
+    color: black;
+}
+
+section.journal a span.journal-button-icon{
+    background-color: #F49F0A;
+}
+
+/* raido logo */
+
+.raido-logo{
+    padding: 200px 392px 199px 399px;
+}
+
+/* Galeri photo */
+
+.galeri-title{
+    text-align: center;
+}
+
+.galeri-title h2{
+    font-size: 42px;
+}
+
+.galeri-title p{
+    font-size: 16;
+    padding: 32px 0px;
+}
+
+.photos{
+    width: 100%;
+    padding: 41px 0px 0px 0px;  
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+.photo-3{
+    position: absolute;
+    padding: 0px 0px 0px 545px;
+}
+
+.photo-4{
+  padding: 0px 0px 0px 310px;
+}
