--- a/style.css
+++ b/style.css
@@ -351,159 +351,126 @@ section.discover .container-discover {
     font-size: 16px;
 }
 
-.bloges{
+.bloges {
     display: flex;
     flex-direction: row;
     padding: 150px 0px;
     align-items: flex-end;
     width: 100%;
-    height: 25%;
-    
 }
 
-.bloges h2{
-    position: absolute;    
-    margin: -115px 0px;
+.blog-item {
     width: 25%;
+    height: 100%;
+    position: relative;
+}
+
+.blog-item h2 {
+    position: absolute;
+    bottom: 23px;
+    left: 20px;
+    max-width: 75%;
+    font-size: 18px;
  }
  
- .bloges img{
+ .blog-item img{
      opacity: 0.7;
+     width: 100%;
+     object-fit: cover;
  }
 
- .blog-1{
-    width: 25%;
-    height: 100%;
- }
-
- .blog-2{
-    width: 25%;
-    height: 100%;
- }
-
- .blog-3{
-    width: 25%;
-    height: 100%;
- }
-
- .blog-4{
-    width: 25%;
-    height: 100%;
- }
 /* journal */
 
 
-.journal-title{
+.journal-title {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     text-align: center;
-    padding: 220px 0px;
+    margin-bottom: 40px;
 }
 
 .journal-title h2{
     font-size: 42px;
 }
 
-.journal-title p{
+.journal-title p {
     font-size: 16px;
     padding: 30px 0px;
+    max-width: 520px;
 }
 
-.journales{
+.journal .container {
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 0px 170px;
-    width: 76%;
+    flex-direction: column;
+    align-items: center;
+}
+
+.journales {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 40px;
+    width: 100%;
     height: 100%;
 }
 
-.first-row{
-    display: flex;
-    flex-direction: row;
-    gap: 40px;
+
+.journal-item .journal-img {
+    width: 100%;
+    object-fit: cover;
 }
 
-.second-row{
-    display: flex;
-    flex-direction: row;
-    gap: 40px;
-    padding: 40px 0px;
-}
-
-
-
-.first-row-img{
-    margin: -3px 0px;
-}
-
-.first-row-avatar{
-    display: flex;
-    flex-wrap: wrap;
+.journal-item .journal-info {
     background-color: #1F242E;
+    padding: 30px;
 }
 
-.journal-vatar-img{
-    padding: 0px 30px;
-}
-
-.first-row-avatar p{
-    font-size: 14px;
-}
-
-.first-row-avatar h2{
-    font-size: 18px;
-    padding: 14px 30px 11px 30px;
-}
-
-.first-row-avatar :nth-child(4){
-    font-size: 14px;
-    color: #757D8C;
-    padding: 11px 231px 30px 30px;
-}
-
-.second-row-img{
-    margin: -3px 0px;
-}
-
-.second-row-avatar{
+.journal-item .journal-info .avatar {
     display: flex;
-    flex-wrap: wrap;
-    background-color: #1F242E; 
+    gap: 10px;
+    align-items: center;
 }
 
-.second-row-avatar p{
-    font-size: 14px;
-}
-
-.second-row-avatar h2{
+.journal-item .journal-info h2 {
     font-size: 18px;
-    padding: 14px 30px 11px 30px;
+    margin: 14px 0px 12px;
 }
 
-.second-row-avatar :nth-child(4){
+.journal-item .journal-info .actions {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.journal-item .journal-info .actions p {
     font-size: 14px;
     color: #757D8C;
-    padding: 11px 231px 30px 30px;
 }
 
-.share-icon{
-    padding: 6px 30px 30px 286px;
-    margin: -57px 0px 0px 0px;
-}
-
-section.journal a span.journal-button-text{
+section.journal a {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 23px;
     background-color: #F49F0A;
-    color: black;
+    margin-top: 60px;
 }
 
-section.journal a span.journal-button-icon{
-    background-color: #F49F0A;
+section.journal a span.text {
+    padding: 16px 0px 14px 20px;
+}
+
+section.journal a span.icon {
+    padding: 13px;
+    background-color: #E89400;
 }
 
 /* raido logo */
 
-.raido-logo{
-    padding: 200px 392px 199px 399px;
+.raido-logo {
+    padding: 200px 0px 199px 0px;
+    display: flex;
+    justify-content: center;
 }
 
 /* Galeri photo */
@@ -512,36 +479,44 @@ section.journal a span.journal-button-icon{
     text-align: center;
 }
 
-.galeri-title h2{
+.galeri-title h2 {
     font-size: 42px;
 }
 
-.galeri-title p{
+.galeri-title p {
     font-size: 16;
     padding: 32px 0px;
 }
 
-.photos{
+.photos {
     width: 100%;
-    padding: 41px 0px 0px 0px;  
+    padding: 0px 20px 0px 20px;  
     display: flex;
     flex-direction: row;
     gap: 20px;
 }
 
-.photo-3{
-    position: absolute;
-    padding: 0px 0px 0px 545px;
+.photo {
+    width: 20%;
+    position: relative;
+    overflow: hidden;
+    transition: transform 0.3s ease-in-out;
+
 }
 
-.photo-4{
-  padding: 0px 0px 0px 310px;
+.photo img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .galeri-text{
-    position: relative;
+    position: absolute;
+    bottom: -200px;
+    left: 50%;
+    transform: translateX(-50%);
     text-align: center;
-    margin: -45px 0px 0px 0px ;
+    transition: bottom 0.3s ease-in-out;
 }
 
 .galeri-text h2{
@@ -550,6 +525,15 @@ section.journal a span.journal-button-icon{
 
 .galeri-text p{
     font-size: 16px;
+}
+
+.photo:hover {
+    transform: scale(1.15, 1.05);
+    z-index: 99;
+}
+
+.photo:hover .galeri-text {
+    bottom: 45px;
 }
 
 /*contact*/
