--- a/style.css
+++ b/style.css
@@ -34,9 +34,18 @@ body {
 header {
     width: 100%;
     padding: 28px 0px;
-    position: absolute;
+    position: fixed;
     border-bottom: 1px solid #707070;
     z-index: 99;
+}
+
+header.sticky{
+    padding: 30px 10px;
+    background-color: black;
+}
+
+header.sticky ul li a{
+    color: white;
 }
 
 header .container {
@@ -626,13 +635,13 @@ section.contact{
 
 .last-icone{
     display: flex;
-    flex-direction: row;
-    padding: 32px 638px 40px 637px;
+    justify-content: center;
+    margin-top: 25px;
     gap: 30px;
 }
 
 .last-information{
-    padding: 40px 452px 44px 452px;
+  margin-top: 25px;
 }
 
 .last-information h2{
@@ -640,23 +649,12 @@ section.contact{
     text-align: center;
 }
 
-.footer-container{
-    margin: auto;
-    max-width: 1160px;
-    height: 100%;
-}
-
-.footer-container{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
 
 .footer {
     width: 100%;
-    padding: 28px 0px;
     position: absolute;
     border-bottom: 1px solid #707070;
+    justify-content: center;
     z-index: 99;
 }
 
@@ -664,6 +662,7 @@ footer nav ul {
     list-style: none;
     display: flex;
     gap: 47px;
+    justify-content: center;
 }
 
 footer nav ul li {
@@ -676,23 +675,13 @@ footer nav ul li a {
 
 .last-menu{
     display: flex;
-    flex-direction: row;
     gap: 65px;
-    padding: 44px 315px 120px 307px;
+    margin-top: 25px;
 }
 
 .page-bottom h2{
     font-size: 14px;
     text-align: center;
+    margin-top: 50px;
 }
 
-.page-bottom h2::after {
-    content: '';
-    display: inline-block;
-    height: 1111px;
-    width: 0.38px;
-    background-color: #2B313C;
-    position: absolute;
-    transform: rotate(90deg);   
-    margin: -565px -30px;
-}
